<resources>
    <string name="app_name" translatable="false">Health Care Center</string>

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Start">Start</string>
    <string name="Close">Close</string>
    <string name="health_care_center">Health Care Center</string>

    <string name="navigation_drawer_open"> Open Navigation Drawer</string>
    <string name="navigation_drawer_close"> Close Navigation Drawer</string>
    <string name="blood_donation_form">Blood Donation Form</string>
    <string name="age">Age :</string>
    <string name="date">Date :</string>
    <string name="gender">Gender :</string>
    <string name="male">male</string>
    <string name="female">Female</string>
    <string name="enter_blood_group">Enter Blood Group</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="or">OR</string>
    <string name="todo">TODO</string>
    <string name="registration">Registration</string>
    <string name="realtion_with_doanr">Realtion With Doanr :</string>
    <string name="aadhar_card">Aadhar Card</string>


    <string-array name="relation_with_donar">
        <item>Self</item>
        <item>Mother</item>
        <item>Brother</item>
        <item>Father</item>
        <item>Sister</item>
        <item>Uncle</item>
        <item>Son</item>
        <item>Aunty</item>

    </string-array>
    <string-array name="blood_types">

        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string-array name="city_name">
        <item>Pune</item>
        <item>Mumbai</item>
        <item>Amravati</item>
        <item>Osmanabad</item>
        <item>Solapur</item>
        <item>Kolhapur</item>
        <item>Satara</item>
        <item>Nashik</item>
        <item>Nagpur</item>
        <item>Aurangabad</item>
    </string-array>

</resources>