<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/topview"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/UI" />


    <View
        android:id="@+id/topview2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@+id/topview"
        android:background="@drawable/ic_wave" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/simonetta"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/InputEmail"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_below="@+id/topview2"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/UI" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_below="@+id/InputEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/UI" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/InputPassword"
        android:layout_alignParentRight="true"
        android:layout_marginTop="12dp"
        android:layout_marginRight="45dp"
        android:fontFamily="@font/simonetta"
        android:text="@string/forgot_password"
        android:textColor="@color/UI"
        android:textSize="15sp"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/loginbtn"
        android:layout_width="320dp"
        android:layout_height="47dp"
        android:layout_below="@+id/forgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/simonetta"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/simonetta"
        android:text="---------------OR---------------"
        android:textAlignment="center"
        android:textColor="@color/UI"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/CreateNewAccountNgo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/simonetta"
        android:text="Create New Account As An NGO"
        android:textColor="@color/UI"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/createNewAccountAsDonar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CreateNewAccountNgo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/simonetta"
        android:text="Create New Account As A Donar"
        android:textColor="@color/UI"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>

