<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Organ_Donation">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:background="@drawable/border_blood"
            android:fontFamily="@font/aladin"
            android:gravity="center"
            android:text="Organ Donation Form"
            android:textSize="30sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.133"></TextView>

    </LinearLayout>

    <EditText
        android:id="@+id/Organ_Donar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_blood"
        android:ems="10"
        android:hint="Donar Name :"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"

        android:paddingBottom="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Organ_donar_relation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/Organ_donar_relation"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:background="@drawable/border_blood"
        android:ems="10"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="Realtion with Donar"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/age"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="@+id/Organ_Donar"
        app:layout_constraintTop_toBottomOf="@+id/Organ_Donar" />

    <TextView
        android:id="@+id/Organ_donar_blood_Group"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/border_blood"
        android:ems="10"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="Blood Group"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/Organ_Relation_spinner"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/Organ_donar_relation"
        app:layout_constraintTop_toBottomOf="@+id/Organ_Donar"
        app:layout_constraintVertical_bias="0.035"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/Organ_blood_spinner"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.58"
        app:layout_constraintStart_toEndOf="@+id/Organ_donar_blood_Group"
        app:layout_constraintTop_toBottomOf="@+id/Organ_gender_group"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/blood_Donar_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_blood"
        android:ems="10"
        android:hint="Phone Number :"
        android:inputType="number"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:textColorHint="@color/black"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Ocgan_select_medical_doc"
        app:layout_constraintVertical_bias="0.129" />

    <EditText
        android:id="@+id/birth_date"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_blood"
        android:ems="10"
        android:hint="Birth Date"
        android:inputType="text|time"
        android:textColorHint="@color/black"
        android:paddingLeft="20dp"

        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/age"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Organ_donar_relation"
        app:layout_constraintVertical_bias="0.04" />


        <EditText
            android:id="@+id/age"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:autofillHints=""
            android:background="@drawable/border_blood"
            android:ems="10"
            android:hint="@string/age"
            android:inputType="number"
            android:minHeight="48dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="13dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.975"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Organ_Relation_spinner"
            tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_blood"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="@string/gender"
        android:textColor="@color/black"


        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/birth_date"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth_date"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Organ_Medical_History"
        android:layout_width="161dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/border_blood"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="Medical History"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup3"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Organ_donar_blood_Group"
        app:layout_constraintVertical_bias="0.083" />

    <RadioGroup
        android:id="@+id/Organ_gender_group"
        android:layout_width="220dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/age">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_blood"
            android:checked="false"
            android:text="@string/male"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_blood"
            android:checked="false"
            android:text="@string/female"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup3"
        android:layout_width="189dp"
        android:layout_height="45dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:elevation="3dp"
        android:orientation="horizontal"
        android:paddingStart="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Organ_blood_spinner"
        app:layout_constraintVertical_bias="0.0">


        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_blood"
            android:checked="false"
            android:text="Yes"
            tools:ignore="TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/border_blood"
            android:checked="false"
            android:text="No"
            tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Organ_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/border_blood"
        android:minHeight="48dp"

        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="Submit"
        android:textColor="#F8F5F5"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood_Donar_no"
        tools:ignore="SpeakableTextPresentCheck"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Ocgan_select_medical_doc"
        android:layout_width="168dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:background="@drawable/border_blood"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text="Select Medical Docs"
        android:textColor="#F8F5F5"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Organ_upload_medical_doc"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Organ_Medical_History"
        app:layout_constraintVertical_bias="0.113"
        tools:ignore="SpeakableTextPresentCheck"></com.google.android.material.button.MaterialButton>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Organ_upload_medical_doc"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/border_blood"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="13dp"
        android:text=" Upload Medical Docs"
        android:textColor="#F8F5F5"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup3"
        app:layout_constraintVertical_bias="0.113"
        tools:ignore="SpeakableTextPresentCheck"></com.google.android.material.button.MaterialButton>


</androidx.constraintlayout.widget.ConstraintLayout>